--- a/H99.cabal
+++ b/H99.cabal
@@ -10,6 +10,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
+                     , random
   default-language:    Haskell2010
 
 test-suite H99-test
@@ -18,9 +19,10 @@ test-suite H99-test
   main-is:             Spec.hs
   build-depends:       base
                      , H99
+                     , QuickCheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
   type:     git
-  location: https://github.com/githubuser/H99
+  location: https://github.com/sleexyz/H99
